--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.13.0",
+    "@types/recharts": "^1.8.29",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "mongodb": "^3.7.4",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.1.2",
     "swr": "^2.3.6"
   },
   "devDependencies": {
